added review model, fixed books template, and fixed routes

--- a/app/templates/books.hbs
+++ b/app/templates/books.hbs
@@ -2,8 +2,6 @@
 
 {{#each book in model}}
   {{#link-to "books.book" book}}
-    <li>
-      {{book.title}}
-    </li>
+    <li>{{book.title}}</li>
   {{/link-to}}
 {{/each}}
